# LoConsensus

./: .gitignore  .numba_config.yaml  Makefile  README.md  constants.py  main.py  process.py  requirements.txt  utils.py
app/: app.py  logger.py  requirements.txt  utils.py
data/: data_exploration.py  data_preparation.py  goffsets.pkl  labels.py  motifs.pkl  osdp.pkl  osdp_prep.py  series.pkl  subjects.pkl
loconsensus/: consensuscolumn.py  global_column.py  global_path.py  lococonsensus.py  loconsensus.py  motifconsensus.py  path.py  visualization.py
src/locomotif-loconsensus/: pyproject.toml
src/locomotif-loconsensus/locomotif/loconsensus/: __init__.py  candidate_finder.py  consensus_motif_finder.py  consensus_motif_representative.py  motif_finder.py  motif_representative.py  path.py  path_finder.py  paths_representative.py  similarity_matrix.py  timeseries_generator.py  visualize.py
