##  PROJECT  ##
[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["locomotif"]
namespaces = true

[project]
name = 'locomotif-loconsensus'
authors = [
    { name = 'Jasper Cremers', email = 'jasper.cremers@student.kuleuven.be'}
]
description = 'LoCoMotif extension for consensus motifs.'

requires-python = '>=3.12'
dependencies = [
        'numpy>=2.1.1'
    ]
dynamic = ['version']

[tool.setuptools.dynamic]
version = { attr = "locomotif.loconsensus.__version__" }
